# UAIbotPy

./: .gitignore  LICENSE.md  README.md  main.py  noxfile.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: noxtests.yaml
test/: abb_helper.py  abb_helper_2.py  anim_aula_1b.py  anim_aula_2a.py  anim_aula_2b.py  anim_aula_2c.py  anim_aula_4a.py  anim_aula_4b.py  anim_aula_4c.py  anim_exercicio_1.py  create_darwin_mini_helper_2.py  create_darwin_mini_helper_3.py  create_darwin_mini_helper_4.py  darwin_mini_helper.py  rl_test.py  robot_create_helper.py  test_kuka_per.py
test/test_collision/: collision_map.py  main2.py  main3.py  main4.py  main_test.py
test/test_quadrotor/: main_movement.py  test_object_movement.py  test_second_order.py
tests/test_simobjects/: test_ball.py
tests/test_utils/: test_math.py  test_python_checks.py
uaibot/: __init__.py  setup.cfg  setup.py  sfm.py  simulation.py  threejs_sim.js  utils.py
uaibot/c_implementation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  declarations.h  gjk.c  gjk.h  manipulator.cpp  nanoflann.hpp  pybind_main.cpp  utils.cpp
uaibot/demo/: __init__.py  _constrained_control_demo_1.py  _control_demo_1.py  _control_demo_3.py  constrained_control_demo_1.py  demo.py
uaibot/graphics/: __init__.py  glbmeshmaterial.py  meshmaterial.py  model3d.py  mtlmeshmaterial.py  texture.py
uaibot/robot/: __init__.py  _add_ani_frame.py  _check_free_config.py  _check_free_configuration.py  _compute_dist.py  _compute_dist_auto.py  _const_control.py  _constrained_control.py  _create_abb_crb.py  _create_darwin_mini.py  _create_darwin_mini_arm.py  _create_darwin_mini_leg_left.py  _create_darwin_mini_leg_right.py  _create_davinci.py  _create_davinci_arms.py  _create_davinci_chest.py  _create_epson_t6.py  _create_franka_emika_3.py  _create_franka_ermika_3.py  _create_jaco.py  _create_kinova_gen3.py  _create_kuka_kr5.py  _create_kuka_kr5_per.py  _create_kuka_lbr_iiwa.py  _create_magician_e6.py  _create_staubli_tx60.py  _dist_struct_robot_auto.py  _dist_struct_robot_obj.py  _fkm.py  _gen_code.py  _ikm.py  _jac_ana.py  _jac_geo.py  _set_ani_frame.py  _task_function.py  _to_cpp.py  _update_col_object.py  _vector_field_SE3.py  _vector_field_rn.py  links.py  (+1 more)
uaibot/simobjects/: __init__.py  arrow.py  ball.py  box.py  convexpolytope.py  cylinder.py  frame.py  group.py  htmldiv.py  pointcloud.py  pointlight.py  rigidobject.py  vector.py
uaibot/simulation/: simulation.py  threejs_sim.js
uaibot/tests/: control.html  test_comparison_cpp_py.py  test_control.py  test_diff_smooth.py  test_free_config.py  test_o2o.py  test_o2o_smooth.py  test_vf.py  utils_test.py
uaibot/utils/: __init__.py  py.typed  sfm.py  types.py  utils.py  utils.pyi
